--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,10 @@ cypress-tests/debug.log
 
 /test/fixtures
 /test/reports
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
